unpackaged/main/default/objects/Expense__c/fields/AssessedAmount__c.field-meta.xml
<CustomField>
    <fullName>AssessedAmount__c</fullName>
    <label>Assessed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>