unpackaged/main/default/objects/Expense__c/fields/BasiqAmount__c.field-meta.xml
<CustomField>
    <fullName>BasiqAmount__c</fullName>
    <label>Basiq Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>