unpackaged/main/default/objects/Expense__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Groceries</fullName>
            </value>
            <value>
                <fullName>Household utility bills</fullName>
            </value>
            <value>
                <fullName>Telecommunication</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Household Goods</fullName>
            </value>
            <value>
                <fullName>Recreation and entertainment</fullName>
            </value>
            <value>
                <fullName>Clothing/Personal Care</fullName>
            </value>
            <value>
                <fullName>Medical and health</fullName>
            </value>
            <value>
                <fullName>Professional Service</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Childcare and education</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>