unpackaged/main/default/objects/Expense__c/fields/ExpenseAmount__c.field-meta.xml
<CustomField>
    <fullName>ExpenseAmount__c</fullName>
    <description>Field to capture the expense amount entered by an applicant.</description>
    <label>Expense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>