unpackaged/main/default/objects/Expense__c/fields/ExpenseFrequency__c.field-meta.xml
<CustomField>
    <fullName>ExpenseFrequency__c</fullName>
    <label>Expense Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>