unpackaged/main/default/objects/Expense__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinancialsSource</valueSetName>
    </valueSet>
</CustomField>